Fixes overlap issue (or at least most of it?)
TODO: Deep investigation on how to handle disease pathways. There appear to be multiple disease pathway diagram xml structures.

--- a/dcc-portal-ui/src/main/js/app/styles/_modules/_pathwayviewer.scss
+++ b/dcc-portal-ui/src/main/js/app/styles/_modules/_pathwayviewer.scss
@@ -21,10 +21,20 @@ $compartmentBorder:#ffc38b;
   stroke:$primaryNodeBorder;
 }
 
+.span__RenderableRect, .span__RenderableProtein, .span__RenderableChemical, .span__RenderableEntity, .span__ProcessNode{
+  background: $primaryNodeColor;
+  padding: 2px;
+}
+
 .RenderableComplex, .RenderableEntitySet{
   fill:$secondaryNodeColor;
   stroke-width:$lineThicknessLight;
   stroke: $secondaryNodeBorder;
+}
+
+.span__RenderableComplex, .span__RenderableEntitySet{
+  background:$secondaryNodeColor;
+  padding:2px;
 }
 
 .RenderableEntitySet{
